--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,14 @@
     margin: 0
 }
 
+/* Header */
 .header {
     padding: 20px;
     display: flex;
     flex-direction: row;
     gap: 20px;
     align-items: center;
-    background-color: #2e0610;
+    background-color: #451a03;
     justify-content: space-around;
 }
 
@@ -52,4 +53,32 @@ h1 {
 .nav li:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+
+/* Main */
+.main {
+    padding: 20px;
+    display: grid;
+    justify-content: center;
+    
+}
+
+.add-book {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    background-color: #b4530986;
+    padding: 15px;
+    border-radius: 50px;
+    font-weight: bold;
+    font-size: 1.5em;
+    transition-duration: 0.1s;
+    cursor: pointer;
+}
+
+.add-book:active {
+    transform: scale(1.1);
+    transition-duration: 0.1s;
 }
