--- a/styles.css
+++ b/styles.css
@@ -111,15 +111,38 @@ h1 {
     left: 50%;
     margin-top: -175px;
     margin-left: -200px;
-    padding: 20px
+    padding: 20px;
 }
 
-.inactive {
-    display: none;
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 .active {
     display: block;
+    animation: fade-in 1s;
+}
+
+.deactivating {
+    animation: fade-out 1s;
+}
+
+.inactive {
+    display: none;
 }
 
 form {
