added functionality to the library

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,9 @@ h1 {
     justify-content: center;
     align-items: center;
     justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-rows: 100px auto;
+    grid-auto-rows: 1fr;
 }
 
 .add-book {
@@ -79,6 +82,7 @@ h1 {
     cursor: pointer;
     user-select: none;
     width: 200px;
+    grid-area: 1 / 1 / 2 / -1;
 }
 
 .add-book:active {
@@ -88,7 +92,7 @@ h1 {
 
 .book {
     margin: 20px;
-    font-size: 1.2em;
+    font-size: 1.3em;
     text-align: left;
     padding: 19px;
     border-color: black;
@@ -97,6 +101,7 @@ h1 {
     border-radius: 30px;
     width: 250px;
     background-color: #fefce8;
+    box-shadow: 10px 10px 15px black;
 }
 
 .form {
