--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
 .header {
     padding: 20px;
     display: flex;
+    height: 25vh;
+    box-sizing: border-box;
     flex-direction: row;
     gap: 20px;
     align-items: center;
@@ -62,6 +64,9 @@ h1 {
     justify-content: center;
     align-items: center;
     justify-items: center;
+    box-sizing: border-box;
+    min-height: 75vh;
+    background-color: #fefce8;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-template-rows: 100px auto;
     grid-auto-rows: 1fr;
@@ -102,9 +107,9 @@ h1 {
     border-width: 1px;
     border-style: solid;
     border-radius: 30px;
-    width: 250px;
-    background-color: #fefce8;
+    width: 300px;
     box-shadow: 10px 10px 15px black;
+    background-color:white;
 }
 
 .book img {
@@ -222,4 +227,15 @@ input {
 #cancel {
     cursor: pointer;
     background-color: rgba(255, 0, 0, 0.7);
+}
+
+.blank {
+    display: none;
+    background-color: rgba(128, 128, 128, 0.5);
+    box-sizing: border-box;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
